--- a/frontend/src/components/Forms/FormInput.css
+++ b/frontend/src/components/Forms/FormInput.css
@@ -1,14 +1,18 @@
+body {
+    overflow-x: hidden;
+}
+
 input {
     background-color: #93BA85;
     border: 2px solid #51843f;
     border-radius: 5px;
     font-family: 'Poppins', sans-serif;
-    width: 100%;
+    width: 98%;
 }
 
 select {
-    background-color: #ddffd1;
-    border: 2px solid #93BA85;
+    background-color: #93BA85;
+    border: 2px solid #51843f;
     border-radius: 5px;
     font-family: 'Poppins', sans-serif;
     width: 100%;
@@ -33,7 +37,7 @@ select {
     display: inline-block;
     width: 15px;
     height: 15px;
-    margin-right: 10px;
+    margin-right: 6px;
     border: 2px solid #ccc;
     border-radius: 50%;
     transition: 0.3s;
@@ -56,7 +60,7 @@ select {
     display: inline-flex;
     align-items: center;
     cursor: pointer;
-    margin-right: 1rem;
+    margin-right: 0.5rem;
     font-size: 1rem;
     position: relative;
 }
@@ -66,7 +70,7 @@ select {
     display: inline-block;
     width: 20px;
     height: 20px;
-    margin-right: 10px;
+    margin-right: 6px;
     border: 2px solid #ccc;
     border-radius: 4px;
     background-color: #fff;
@@ -87,4 +91,3 @@ select {
     left: 6px;
     top: 2px;
 }
- 
