--- a/frontend/src/pages/register/Register.css
+++ b/frontend/src/pages/register/Register.css
@@ -17,12 +17,12 @@
 
 .register-form {
   margin-top: 20px;
-  width: 480px;
-  height: 550px;
+  max-width: 480px;
+  max-height: 550px;
   max-width: 600px;
   background-color: #dbe9bd;
   border: 6.5px solid #608A33;
-  padding: 40px 50px 10px 50px;
+  padding: 30px 50px 40px 50px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -52,27 +52,16 @@
 }
 
 .button-container {
-  text-align: center;
+  align-items: center;
   margin-top: 20px;
+  margin-bottom: 20px;
+  width: 100%;
 }
 
 .register-btn {
   margin-top: 20px;
   width: 100%;
-  padding: 10px;
-  font-size: 1.7rem;
-  background-color: #3a5a40;
-  color: #ffffff;
-  border: none;
-  border-radius: 20px;
-  cursor: pointer;
-  transition: background-color 0.2s;
 }
-
-.register-btn:hover {
-  background-color: #2c4a31;
-}
-
 
 .input-field::placeholder {
   color: #93BA85; 
