--- a/frontend/src/pages/login/Login.css
+++ b/frontend/src/pages/login/Login.css
@@ -24,7 +24,7 @@
   width: 480px; 
   height: 500px;
   background-color: #dbe9bd;
-  padding: 10px 40px 170px; 
+  padding: 10px 40px 200px; 
   border-radius: 30px;
   border: 6.5px solid #608A33;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -110,4 +110,9 @@
   height: 1px;
   background-color: #608A33;
   margin: 0 10px;
+}
+
+.error-message{
+  color: red;
+  font-size: 20px;
 }
