--- a/frontend/src/pages/login/Login.css
+++ b/frontend/src/pages/login/Login.css
@@ -6,9 +6,22 @@
   align-items: center;
   justify-content: flex-start;
   height: 100vh;
-  background-color: #cad9ac;
-  font-family: 'Lilita One', sans-serif;
+  background: url('simple.png') no-repeat center center fixed;
+  background-size: cover; 
+  position: relative;
+  font-family: 'Lilita One', sans-serif;  
+}
 
+
+.login-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(202, 217, 172, 0.6);
+  z-index: 0;
 }
 
 .title {
@@ -29,6 +42,8 @@
   border: 6.5px solid #608A33;
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   text-align: center;
+  position: relative;
+  z-index: 1;
 }
 
 
@@ -116,3 +131,4 @@
   color: red;
   font-size: 20px;
 }
+
