--- a/frontend/src/pages/register/Register.css
+++ b/frontend/src/pages/register/Register.css
@@ -5,14 +5,30 @@
   align-items: center;
   justify-content: flex-start;
   height: 100vh;
+  background: url('simple.png') no-repeat center center fixed;
+  background-size: cover; 
+  position: relative;
   font-family: 'Lilita One', sans-serif;
 }
 
+.register-container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(202, 217, 172, 0.6); 
+  z-index: 0;
+}
+
 .register-title {
-  margin-top: 100px;
-  font-size: 5rem;
-  margin-bottom: 20px;
+  margin-top: 36px;
+  font-size: 6rem;
   color: #4a752c;
+  margin-bottom: 30px;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+  z-index: 1;
 }
 
 .register-form {
@@ -22,9 +38,10 @@
   max-width: 600px;
   background-color: #dbe9bd;
   border: 6.5px solid #608A33;
-  padding: 30px 50px 80px 50px;
+  padding: 30px 50px 110px 50px;
   border-radius: 30px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 1;
 }
 
 .inputs {
@@ -58,7 +75,7 @@ border-color: #608a33;
 .button-container {
   align-items: center;
   margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   width: 100%;
 }
 
