--- a/frontend/src/pages/calculator/Calculator.css
+++ b/frontend/src/pages/calculator/Calculator.css
@@ -61,3 +61,24 @@ body, p, label {
     white-space: nowrap; 
 }
 
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.spinning-earth {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    border-radius: 50%;
+    background-image: url('earths.png'); 
+    background-size: cover;
+    animation: spin 2s linear infinite;
+}
+
+
+
